--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,10 @@
 /* Your CSS Code here. */
 table, th, td {
 	border: 1px solid black;
+	
 }
 table{
 	width: 100%;
 	height: 100%;
+	text-align:center;
 }
