--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
 /* Your CSS Code here. */
 table, th, td {
 	border: 1px solid black;
-	
+	border-collapse: collapse;
+      padding: 8px;
 }
 table{
 	
