--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,7 @@
 
 /* Your CSS Code here. */
-table, th, td {
+table, tr, th, td {
 	border: 1px solid black;
-	border-collapse: collapse;
-      padding: 8px;
 }
 table{
 	
