--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 /* Your CSS Code here. */
-table, tr, th, td {
-	border: 2px solid black;
+table,  th, td {
+	border: 1px solid black;
 }
 td{
 	padding:8px 0 8px 0;
